# Estadistica-y-Probabilidad-con-Python-para-STEM

./: .gitignore  05_Probabilidad como frecuencia.ipynb  06_Probabilidad Condicionada.ipynb  07_Variable aleatoria.ipynb  08_Distribución Uniforme Discreta.ipynb  09_Distribución Bernouilli_Binomial.ipynb  10_Distribución Multinomial.ipynb  11_Distribución de Poisson.ipynb  14_Distribución Uniforme Continua.ipynb  15_Distribución Exponencial.ipynb  16_Distribución Weibull.ipynb  17_Distribución Normal.ipynb  1_Numeros aleatorios_git.ipynb  20_Distribución F.ipynb  22_Teorema Central del Límite.ipynb  23_Estimación puntual de parámetros I.ipynb  24_Estimacion puntual_II.ipynb  28_Ajuste a distribución.ipynb  29_Regresion lineal.ipynb  30_Método de Montecarlo.ipynb  3_Estadística Descriptiva.ipynb  404.html  4_Diagramas_Venn_Python.ipynb  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
Contenido/: 01_Numeros aleatorios.html  02_Combinatoria.html  03_Estadística Descriptiva.html  04_Diagramas_Venn_Python.html  05_Probabilidad como frecuencia.html  06_Probabilidad Condicionada.html  07_Variable aleatoria.html  08_Distribución Uniforme Discreta.html  09_Distribución Bernouilli_Binomial.html  10_Distribución Multinomial.html  11_Distribución de Poisson.html  12_Distribución Geométrica.html  13_Distribución Hipergeométrica.html  14_Distribución Uniforme Continua.html  15_Distribución Exponencial.html  16_Distribución Weibull.html  17_Distribución Normal.html  18_Distribución t Student.html  19_Distribución Chi Cuadrado.html  20_Distribución F.html  (+10 more)
(+44 files in other folders)
