[project]
name = "src"
version = "0.1.0"
description = "Estadística y Probabilidad con Python para STEM"
authors = [
    {name = "Manuel Gómez Navarrete", email = "nothing@nothing.com"}
]
maintainers = [
    { name = "Daniel Bazo Correa", email = "nothing@nothing.com" }
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = {extras = ["jupyter"], version = "^25.1.0"}
flake8 = "^7.1.1"
Flake8-pyproject = "^1.2.3"
typing-extensions = "^4.12.2"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"
mkdocs-material = "^9.5.49"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-git-authors-plugin = "^0.9.2"
mkdocs-enumerate-headings-plugin = "^0.6.2"
mkdocs-jupyter = "^0.25.1"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"